[tool.poetry]
name = "goit-python-web-homework-05"
version = "0.1.0"
description = ""
authors = ["Artem-Shabaltun <134101240+Artem-Shabaltun@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
